<resources>
    <string name="app_name">Анекдоты</string>

    <string name="activity_main">Анекдоты</string>
    <string name="postfix_map">Карта</string>

    <string name="button_map">Карта?</string>
    <string name="button_delete">Удалить</string>
    <string name="button_save">Сохранить</string>

    <string name="button_fav">Закладки</string>
    <string name="button_next">Далее</string>
    <string name="button_back">Назад</string>

    <string name="category_chapaev">Про Чапаева</string>
    <string name="category_b">Категории Б</string>
    <string name="category_nations">Про национальности</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="no_fav">Нет закладок</string>

    <string name="sample_anec">
        Однажды в воскресенье начальник тюрьмы вызвал преступника, приговорённого к казни, и сообщил ему:\n
        Вас казнят на следующей неделе в полдень.
        День казни станет для вас сюрпризом, вы узнаете о нём,
        только когда палач в полдень войдёт к вам в камеру.\n
        Начальник тюрьмы был честнейшим человеком и никогда не врал.\n
        \n
        Заключённый подумал над его словами и улыбнулся:\n
        «В воскресенье меня казнить не могут!\n
        Ведь тогда уже в субботу вечером я буду знать об этом.\n
        А, по словам начальника, я не буду знать день своей казни.\n
        Следовательно, последний возможный день моей казни — суббота.\n
        Но если меня не казнят в пятницу, то я буду заранее знать,
        что меня казнят в субботу, значит, и её можно исключить».\n
        Последовательно исключив пятницу, четверг, среду, вторник и понедельник,
        преступник пришёл к выводу, что начальник не сможет его казнить, выполнив все свои слова.\n
        \n
        Преступника казнили в тот же день.\n
        Начальник впервые напиздел.



        Однажды в воскресенье начальник тюрьмы вызвал преступника, приговорённого к казни, и сообщил ему:\n
        Вас казнят на следующей неделе в полдень.
        День казни станет для вас сюрпризом, вы узнаете о нём,
        только когда палач в полдень войдёт к вам в камеру.\n
        Начальник тюрьмы был честнейшим человеком и никогда не врал.\n
        \n
        Заключённый подумал над его словами и улыбнулся:\n
        «В воскресенье меня казнить не могут!\n
        Ведь тогда уже в субботу вечером я буду знать об этом.\n
        А, по словам начальника, я не буду знать день своей казни.\n
        Следовательно, последний возможный день моей казни — суббота.\n
        Но если меня не казнят в пятницу, то я буду заранее знать,
        что меня казнят в субботу, значит, и её можно исключить».\n
        Последовательно исключив пятницу, четверг, среду, вторник и понедельник,
        преступник пришёл к выводу, что начальник не сможет его казнить, выполнив все свои слова.\n
        \n
        Преступника казнили в тот же день.\n
        Начальник впервые напиздел.
    </string>
</resources>