<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/favLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingBottom="96dp"
        android:showDividers="none"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:height="32dp"
            android:maxHeight="32dp"
            android:text="@string/button_map"
            app:cornerRadius="16dp" />

        <Button
            android:id="@+id/btnFav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:background="@drawable/uhahatbl_background"
            android:text="@string/button_fav"
            app:cornerRadius="16dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnChapaev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:height="32dp"
            android:maxHeight="32dp"
            android:text="@string/category_chapaev"
            app:cornerRadius="16dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCatB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:height="32dp"
            android:maxHeight="32dp"
            android:text="@string/category_b"
            app:cornerRadius="16dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnNations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:height="32dp"
            android:maxHeight="32dp"
            android:text="@string/category_nations"
            app:cornerRadius="16dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>